--- a/documentation/Data types fabric (dtFabric) format.asciidoc
+++ b/documentation/Data types fabric (dtFabric) format.asciidoc
@@ -282,6 +282,7 @@ Sequence data type specfic attributes:
 |===
 | Attribute name | Attribute type | Description
 | element_data_type | string | Data type of sequence element
+| elements_data_size | integer or string | Integer value or expression to determine the data size of the elements in the sequence
 | number_of_elements | integer or string | Integer value or expression to determine the number of elements in the sequence
 |===
 
@@ -299,7 +300,17 @@ element_data_type: byte
 number_of_elements: data_size
 ----
 
-[yellow-background]*TODO: add definition of attributes*
+Stream data type specfic attributes:
+
+[cols="1,1,5",options="header"]
+|===
+| Attribute name | Attribute type | Description
+| element_data_type | string | Data type of stream element
+| elements_data_size | integer or string | Integer value or expression to determine the data size of the elements in the stream
+| number_of_elements | integer or string | Integer value or expression to determine the number of elements in the stream
+|===
+
+[yellow-background]*TODO: describe expressions and the map context*
 
 === String
 A string is a data type to represent a continous sequence of elements with a
@@ -309,11 +320,23 @@ known encoding such as an UTF-16 formatted string.
 ----
 name: utf16le_string
 type: string
+ecoding: utf-16-le
 element_data_type: wchar16
-number_of_elements: string_data_size / 2
-attributes:
-  byte_order: little-endian
+elements_data_size: string_data_size
 ----
+
+Stream data type specfic attributes:
+
+[cols="1,1,5",options="header"]
+|===
+| Attribute name | Attribute type | Description
+| encodign | string | Encoding of the string
+| element_data_type | string | Data type of string element
+| elements_data_size | integer or string | Integer value or expression to determine the data size of the elements in the string
+| number_of_elements | integer or string | Integer value or expression to determine the number of elements in the string
+|===
+
+[yellow-background]*TODO: describe expressions and the map context*
 
 [yellow-background]*TODO: add definition of attributes*
 [yellow-background]*TODO: what about NUL-terminated strings?*
