--- a/data/overview.asciidoc
+++ b/data/overview.asciidoc
@@ -1,18 +1,11 @@
 == Overview
+${summary}
 
 [cols="1,5",options="header"]
 |===
 | Characteristics | Description
-| Byte order | 
+| Byte order | ${byte_order}
 | Date and time values | 
 | Character strings | 
-|===
-
-=== Heading 2
-
-[cols="1,1,1,5",options="header"]
-|===
-| Offset | Size | Value | Description
-| 0 | 4 | | Signature
 |===
 
